# goal

./: Cargo.toml  readme.md  taskwarrior-comparison.md
.github/workflows/: ci.yml
src/: cli.rs  db.rs  display.rs  main.rs  tests.rs
tests/: integration.rs
