[package]
name = "goal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
directories = "6.0.0"
getrandom = "0.4.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
